# Sonic-CD-11-Decompilation

./: CMakeLists.txt
CMake/: FindOggVorbis.cmake  FindTheora.cmake
SonicCDDecomp/: CMakeLists.txt  Ini.cpp  RetroEngine.hpp  Script.cpp
